Se agrega libconfig, se deshabilita gettext

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,4 @@
-SUBDIRS = src po
+bin_PROGRAMS = servers
+servers_CPPFLAGS = -DDEBUG
+servers_LDFLAGS = -lconfig
+servers_SOURCES = src/servers.c src/configuration.h
