Se soluciona compilacion de multiples programas se comienza lectura de repositorio git con libreria libgit2

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,22 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.h
+config.h.in
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+servers
+stamp-h1
+config.guess
+*~
+src/~
