Se utiliza libreria curl para peticiones a servidor

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,2 @@
-bin_PROGRAMS = servers sync
-servers_CPPFLAGS = -DDEBUG -std=c18
-servers_LDFLAGS = -lconfig
-servers_SOURCES = src/servers.c src/configuration.h
-
-sync_CPPFLAGS = -DDEBUG -std=c18
-sync_LDFLAGS = -lgit2
-sync_SOURCES = src/sync.c
+SUBDIRS = src
+dist_doc_DATA = README
