--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,8 @@
-bin_PROGRAMS = servers
+bin_PROGRAMS = servers sync
+servers_CPPFLAGS = -DDEBUG -std=c18
+servers_LDFLAGS = -lconfig -lcurl
+servers_SOURCES = servers.c src/configuration.h
 
-servers_SOURCES = servers.c
+sync_CPPFLAGS = -DDEBUG -std=c18
+sync_LDFLAGS = -lgit2
+sync_SOURCES = sync.c
