Se separa definicion y declaracion de funciones

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = servers sync
 servers_CPPFLAGS = -DDEBUG
 servers_LDFLAGS = -lconfig -lcurl
-servers_SOURCES = servers.c src/configuration.h
+servers_SOURCES = servers.c	configuration.c
 
 sync_CPPFLAGS = -DDEBUG
 sync_LDFLAGS = -lgit2
